# osrs-bot

./: .gitignore  README.md  pyproject.toml
src/osrs_bot/: __init__.py  __main__.py
