[tool.poetry]
name = "osrs-bot"
version = "0.1.0"
description = ""
authors = ["brock-afk <brockbrumley95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osrs-bot = "osrs_bot.__main__:main"