[tool.poetry]
name = "osrs-bot"
version = "0.1.0"
description = ""
authors = ["brock-afk <brockbrumley95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osrs-bot = "osrs_bot.__main__:main"